# Z2P_Rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  configuration.yaml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20230714041218_create_subscriptions_table.sql  20230725155358_create_subscription_table.sql
scripts/: init_db.sh  migrate.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  mod.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs  subscriptions_confirm.rs
