[package]
name = "z2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4.3.1"
serde = { version = "1", features = ["derive"] }
config = "0.13"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default_features = false, features = ["clock"] }

[dependencies.sqlx]
version = "0.6"
default_features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.11.18"

[lib]
path = "src/lib.rs"

[[build]]
path = "./src/main.rs"
name = "z2p"


