[package]
name = "z2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4.3.1"
serde = { version = "1", features = ["derive"] }
config = "0.13"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default_features = false, features = ["clock"] }

# the following dependencies is for logging and tracing
#env_logger = "0.9.0"
log = "0.4.19"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-actix-web = "0.7"
secrecy = { version = "0.8", features = ["serde"] }
unicode-segmentation = "1"




[dependencies.sqlx]
version = "0.6"
default_features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.11.18"
once_cell = "1"

[lib]
path = "src/lib.rs"

[[build]]
path = "./src/main.rs"
name = "z2p"


